--- a/portfolio/dev1/main/default/classes/ContactController.cls
+++ b/portfolio/dev1/main/default/classes/ContactController.cls
@@ -1,6 +1,6 @@
 public with sharing class ContactController {
     @AuraEnabled(cacheable=true)
     public static List<Contact> getContacts() {
-        return [SELECT Id, FirstName, LastName, Email FROM Contact LIMIT 100];
+        return [SELECT Id, FirstName, LastName, Email, Birthdate FROM Contact LIMIT 100];
     }
 }
